--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-﻿<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Code Linter Debugger</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+
     body {
       font-family: sans-serif;
       background: #f0f2f5;
       padding: 20px;
     }
+
     .container {
       display: flex;
       gap: 20px;
+      flex-wrap: wrap;
     }
+
     textarea {
       width: 100%;
       height: 400px;
@@ -23,17 +28,21 @@
       font-size: 14px;
       border-radius: 4px;
     }
+
     .code-panel {
-      flex: 1;
+      flex: 1 1 400px;
     }
+
     .results-panel {
-      flex: 1;
+      flex: 1 1 400px;
       background: white;
       border: 1px solid #ccc;
       padding: 10px;
       border-radius: 4px;
       overflow-y: auto;
+      min-height: 400px;
     }
+
     button {
       margin-top: 10px;
       padding: 8px 16px;
@@ -43,12 +52,23 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     ul {
       margin-top: 10px;
       padding-left: 20px;
     }
+
     li {
       margin-bottom: 6px;
+      font-family: monospace;
+    }
+
+    .error {
+      color: red;
+    }
+
+    .success {
+      color: green;
     }
   </style>
 </head>
@@ -60,17 +80,19 @@
       <textarea id="codeInput" placeholder="Paste your code here..."></textarea>
       <button onclick="runLinter()">Check Bugs</button>
     </div>
+
     <div class="results-panel">
       <h3>🪲 Linting Results:</h3>
       <ul id="resultsList"></ul>
     </div>
-  </div>  
+  </div>
 
   <script>
-    function checkBugs() {
+    function runLinter() {
       const code = document.getElementById("codeInput").value;
-      const result = document.getElementById("result");
-      
+      const resultsList = document.getElementById("resultsList");
+      resultsList.innerHTML = ""; // clear previous results
+
       const stack = [];
       const opening = ['{', '(', '['];
       const closing = ['}', ')', ']'];
@@ -82,8 +104,10 @@
           stack.push({ char, index: i });
         } else if (closing.includes(char)) {
           if (stack.length === 0 || stack[stack.length - 1].char !== map[char]) {
-            result.className = "result error";
-            result.textContent = `❌ Bug: Unexpected '${char}' at position ${i}`;
+            const li = document.createElement("li");
+            li.className = "error";
+            li.textContent = `❌ Bug: Unexpected '${char}' at position ${i}`;
+            resultsList.appendChild(li);
             return;
           } else {
             stack.pop();
@@ -92,17 +116,19 @@
       }
 
       if (stack.length > 0) {
-        const last = stack[stack.length - 1];
-        result.className = "result error";
-        result.textContent = `❌ Bug: Missing closing for '${last.char}' at position ${last.index}`;
+        stack.forEach(item => {
+          const li = document.createElement("li");
+          li.className = "error";
+          li.textContent = `❌ Bug: Missing closing for '${item.char}' at position ${item.index}`;
+          resultsList.appendChild(li);
+        });
       } else {
-        result.className = "result success";
-        result.textContent = "✅ No syntax bracket issues found!";
+        const li = document.createElement("li");
+        li.className = "success";
+        li.textContent = "✅ No syntax bracket issues found!";
+        resultsList.appendChild(li);
       }
     }
   </script>
-
-  
 </body>
 </html>
-
