--- a/index.html
+++ b/index.html
@@ -88,37 +88,104 @@
   </div>
 
   <script>
-
+    
+/* HTML ___________________________👇 */
 function runLinter() {
   const code = document.getElementById("codeInput").value;
   const resultsList = document.getElementById("resultsList");
-  resultsList.innerHTML = ""; // clear previous results
+  resultsList.innerHTML = "";
 
-  const htmlTagRegex = /<\/?([a-zA-Z0-9\-]+)[^>]*>/g;
   const selfClosingTags = ['br', 'hr', 'img', 'input', 'meta', 'link', 'source', 'track', 'wbr'];
+  const deprecatedTags = ['font', 'center', 'big', 'marquee'];
+  const knownTags = ['html', 'head', 'body', 'div', 'span', 'h1','h2','h3','h4','h5','h6','p','a','ul','ol','li','table','tr','td','th','thead','tbody','footer','header','section','article','aside','nav','button','input','form','label','img','meta','link','script','style','title','br','hr','strong','em','b','i','u','small','figure','figcaption'];
+
+  const tagRegex = /<\s*\/?\s*([a-zA-Z0-9\-]+)([^>]*)>/g;
+  const attrRegex = /\s+([a-zA-Z\-]+)(\s*=\s*("[^"]*"|'[^']*'|[^\s>]+))?/g;
+
   const stack = [];
+  const usedIds = new Set();
   let match;
   let hasErrors = false;
 
-  while ((match = htmlTagRegex.exec(code)) !== null) {
-    const tag = match[1].toLowerCase();
-    const isClosing = match[0].startsWith("</");
+  while ((match = tagRegex.exec(code)) !== null) {
+    const fullTag = match[0];
+    const tagName = match[1].toLowerCase();
+    const attrs = match[2];
+    const isClosing = fullTag.startsWith("</");
+    const isSelfClosing = selfClosingTags.includes(tagName) || fullTag.endsWith("/>");
 
-    if (isClosing) {
-      if (!stack.length || stack[stack.length - 1] !== tag) {
+    // Check if tag is unknown
+    if (!knownTags.includes(tagName) && !isClosing) {
+      const li = document.createElement("li");
+      li.className = "error";
+      li.textContent = `❌ HTML Bug: Unknown tag <${tagName}> at position ${match.index}`;
+      resultsList.appendChild(li);
+      hasErrors = true;
+    }
+
+    // Check if tag is deprecated
+    if (deprecatedTags.includes(tagName)) {
+      const li = document.createElement("li");
+      li.className = "error";
+      li.textContent = `⚠️ HTML Warning: Deprecated tag <${tagName}> used`;
+      resultsList.appendChild(li);
+    }
+
+    // Check attributes
+    let attrMatch;
+    while ((attrMatch = attrRegex.exec(attrs)) !== null) {
+      const attrName = attrMatch[1].toLowerCase();
+      const attrValue = attrMatch[3];
+
+      // Check for duplicate IDs
+      if (attrName === "id" && attrValue) {
+        const idValue = attrValue.replace(/['"]/g, '');
+        if (usedIds.has(idValue)) {
+          const li = document.createElement("li");
+          li.className = "error";
+          li.textContent = `❌ HTML Bug: Duplicate id="${idValue}" found`;
+          resultsList.appendChild(li);
+          hasErrors = true;
+        } else {
+          usedIds.add(idValue);
+        }
+      }
+
+      // Empty alt attribute
+      if (tagName === "img" && attrName === "alt" && attrValue === '""') {
         const li = document.createElement("li");
         li.className = "error";
-        li.textContent = `❌ HTML Bug: Unexpected closing </${tag}> at position ${match.index}`;
+        li.textContent = `⚠️ HTML Warning: <img> has empty alt attribute`;
+        resultsList.appendChild(li);
+      }
+
+      // Attribute without value
+      if (!attrMatch[2] && attrName !== "disabled" && attrName !== "checked") {
+        const li = document.createElement("li");
+        li.className = "error";
+        li.textContent = `❌ HTML Bug: Attribute "${attrName}" missing value in tag <${tagName}>`;
+        resultsList.appendChild(li);
+        hasErrors = true;
+      }
+    }
+
+    // Tag matching
+    if (isClosing) {
+      if (!stack.length || stack[stack.length - 1] !== tagName) {
+        const li = document.createElement("li");
+        li.className = "error";
+        li.textContent = `❌ HTML Bug: Unexpected closing </${tagName}> at position ${match.index}`;
         resultsList.appendChild(li);
         hasErrors = true;
       } else {
         stack.pop();
       }
-    } else if (!selfClosingTags.includes(tag)) {
-      stack.push(tag);
+    } else if (!isSelfClosing) {
+      stack.push(tagName);
     }
   }
 
+  // Unclosed tags
   if (stack.length > 0) {
     stack.forEach(unclosed => {
       const li = document.createElement("li");
@@ -129,11 +196,14 @@ function runLinter() {
     hasErrors = true;
   }
 
-  // If no HTML tag errors, continue to CSS checks (in next part)
   if (!hasErrors) {
-    runCssCheck(code, resultsList);
+    const li = document.createElement("li");
+    li.className = "success";
+    li.textContent = "✅ No HTML bugs found!";
+    resultsList.appendChild(li);
   }
 }
+    
 
 /* CSS ___________________________👇 */
 
@@ -239,6 +309,7 @@ function runLinter() {
   </script>
 </body>
 </html>
+
 
 
 
