--- a/index.html
+++ b/index.html
@@ -173,10 +173,11 @@
   </main>
 
   <footer>
-    <p>🛠 Built by DevTools Lab</p>
+    <p>🛠 Built by Humayun danish</p>
   </footer>
 
-  < script src="main.js"></script >
+<script src="main.js"></script>
 </body>
 </html>
+
 
