--- a/index.html
+++ b/index.html
@@ -151,8 +151,61 @@
     body.light-mode .results h2 {
       color: #007acc;
     }
+
+
+    .editor-panel {
+  flex: 1 1 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.code-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+#codeInput, #codeHighlight {
+  font-family: 'Fira Code', monospace;
+  font-size: 14px;
+  line-height: 1.5;
+  white-space: pre-wrap;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  height: 400px;
+  background-color: #252526;
+  color: #dcdcdc;
+  border: 1px solid #3c3c3c;
+  overflow: auto;
+}
+
+#codeInput {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: transparent;
+  color: transparent;
+  caret-color: white;
+  z-index: 2;
+  resize: none;
+}
+
+#codeHighlight {
+  position: relative;
+  z-index: 1;
+  pointer-events: none;
+  color: #dcdcdc;
+}
+
+/* Highlighted lines */
+.highlight-line {
+  display: block;
+  width: 100%;
+  background-color: rgba(255, 0, 0, 0.1);
+}
   </style>
 </head>
+
 <body>
   <header>
     <h1>🧠 Code Linter Room</h1>
@@ -160,9 +213,14 @@
   </header>
 
   <main class="workspace">
-    <section class="editor">
+    <section class="editor-panel">
       <label for="codeInput">Paste Your HTML/CSS Code</label>
-      <textarea id="codeInput" placeholder="<!DOCTYPE html>\n<html>\n  <head>..."></textarea>
+
+      <div class="code-wrapper">
+        <pre id="codeHighlight"></pre>
+        <textarea id="codeInput" placeholder="<!DOCTYPE html>\n<html>\n  <head>..."></textarea>
+      </div>
+
       <button id="checkBtn">🔍 Check for Bugs</button>
     </section>
 
@@ -176,8 +234,10 @@
     <p>🛠 Built by Humayun danish</p>
   </footer>
 
-<script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
+  
 </html>
+
 
 
