--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <label for="codeInput">Paste Your HTML/CSS Code</label>
 
       <div class="code-wrapper">
-        <div id="codeHighlight"></div>
+        <pre id="codeHighlight"></pre>
         <textarea id="codeInput" placeholder="<!DOCTYPE html>
 <html>
   <head>..."></textarea>
@@ -240,3 +240,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+
