--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer {
   top: 0;
   left: 0;
   background: transparent;
-  color: transparent;
+ color: white;
   caret-color: white;
   z-index: 2;
   resize: none;
@@ -232,5 +232,6 @@ body.light-mode .highlight-line {
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
